# claptrap

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml
.config/: claptrap.dic  spellcheck.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: CNAME
examples/: trip.toml  trippy.sh
src/: cli.rs  command.rs  error.rs  lib.rs  main.rs  output.rs
tests/: arg.rs  basic.rs  command.rs  shell.rs
tests/resources/: bash_file.sh  bash_panic.sh  bash_stdin_heredoc.sh  bash_stdin_redirect.sh  myapp.toml
tests/snapshots/: arg__action_append.snap  arg__action_count.snap  arg__action_help.snap  arg__action_set.snap  arg__action_set_false.snap  arg__action_set_true.snap  arg__action_version.snap  arg__alias.snap  arg__allow_hyphen_values.snap  arg__allow_negative_numbers.snap  arg__conflicts_with.snap  arg__conflicts_with_all.snap  arg__default_missing_value-2.snap  arg__default_missing_value-3.snap  arg__default_missing_value.snap  arg__default_missing_value_bool_literal-2.snap  arg__default_missing_value_bool_literal-3.snap  arg__default_value-2.snap  arg__default_value.snap  arg__default_values-2.snap  arg__default_values.snap  arg__display_order.snap  arg__env_default_value.snap  arg__env_falsey.snap  arg__env_multi.snap  arg__env_option.snap  arg__exclusive.snap  arg__help.snap  arg__help_heading.snap  arg__hide.snap  arg__hide_default_value.snap  arg__hide_env.snap  arg__hide_env_values.snap  arg__hide_long_help-2.snap  arg__hide_long_help.snap  arg__ignore_case.snap  (+83 more)
(+2 files in other folders)
